src/test/ui/rfc-1260-main-reexport/with-args-fn.stderr
error[E0580]: main function has wrong type
  --> $DIR/with-args-fn.rs:19:1
   |
LL | use foo::bar as main;  //~ ERROR
   | ^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected type `fn()`
              found type `fn(i32)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0580`.
